--- a/analysis.html
+++ b/analysis.html
@@ -8,29 +8,48 @@
 
     <!-- Le styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/jqcloud.css" rel="stylesheet">
+    <style type="text/css">
+      @media (min-width: 979px) {
+        body {
+          padding-top: 60px;
+        }
+      }
+      @media (max-width: 767px) {
+        .name, .logout {
+          width: 100%;
+          text-align: left;
+        }
+      }
+    </style>
   </head>
 
   <body>
 
     <!-- 메뉴바 -->
-    <div class="menu row-fluid">
-      <div class="container">
-        <div class="span9 title">
-          <div class="title1">Facebook 분석기</div>
-        </div>
-        <div class="span2">
-          <div id="user_name" class="name"></div>
-        </div>
-        <div class="span1">
-          <div id="logout_url" class="logout"></div>
+    <!-- <div class="menu navbar navbar-fixed-top"> -->
+    <div class=" navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <div class="row-fluid">
+            <div class="span9 title">
+              <div class="title1">Facebook 분석기</div>
+            </div>
+            <div class="span2">
+              <div id="user_name" class="name"></div>
+            </div>
+            <div class="span1">
+              <div id="logout_url" class="logout"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- 결과화면 -->
-    <div class="container">
+    <div class="container-fluid">
       <div class="row-fluid">
         <div id="word_cloud_outer" class="span6 well">
           <h3>키워드</h3>
@@ -38,7 +57,6 @@
           <img src="loading.gif" />
           <div id="word_cloud"></div>
         </div>
-
 
         <!-- <div id="time_analysis" class="span6 bg_white div_height"> -->
         <div id="time_analysis" class="span6 well">
@@ -65,31 +83,17 @@
         </div>
       </div>
 
-      </div>
-
-<!--       <div class="row-fluid">
-        <div id="frieds_activity" class="span6 well">
-          <h1>친한 친구 </h1>
-          <p>내 게시글을 좋아하거나 댓글을 남긴 친구들을 분석합니다.</p>
-          <img src="loading.gif" />
-          <div id="chart_close" ></div>
-        </div>
-      </div> --> <!-- row -->
-
     </div> <!-- containter -->
 
-    <div class="email_footer bg_white">
+    <footer class="email_footer bg_white">
       <p>만든이: <a href="mailto:ej88ej@gmail.com">ej88ej@gmail.com</a></p>
-    </div>
+    </footer>
 
-    <!-- <div class="bg_white"> -->
-    <!-- </div> -->
-    
 
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <script src="http://code.jquery.com/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
     <!-- JQCloud  -->
@@ -98,7 +102,6 @@
     <!-- Google chart -->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     
-
     <script type="text/javascript" src="js/analysis.js"></script>
 
 
