--- a/index.html
+++ b/index.html
@@ -2,41 +2,44 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="user-scalable=no, width=device-width" />
+      <metaname="viewport"content="width=device-width, initial-scale=1.0">
 
     <title>Facebook 분석기</title>
 
     <!-- Le styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
 
-  <body class="bg_green">
+  <body>
 
     <!-- 메뉴바 -->
-    <div class="row-fluid menu">
-      <div class="container">
-        <div class="span9">
-          <div class="title1">Facebook 분석기</div>
-        </div>
-        <div class="span3 email_header">
-          <div>만든이: <a href="mailto:ej88ej@gmail.com">ej88ej@gmail.com</a></div>
+    <div class=" navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <div class="row-fluid">
+            <div class="span9 title">
+              <div class="title1">Facebook 분석기</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="container">
-      <div class="bg_green start_page">
+
+    <div class="container-fluid">
+      <div class="start_page">
         <h1>Facebook 분석기</h1>
-        <p>당신의 페이스북 기록을 분석합니다.</p>
+        <p class="lead">당신의 페이스북 기록을 분석합니다.</p>
         
         <form name="input" action="facebook/redirect.php" method="get">
-          <input class="btn btn-large" type="submit" value="시작">
+          <input class="btn btn-large btn-success" type="submit" value="시작">
         </form>
 
         <div id="word_cloud" style="height:300px"></div>
       </div>
-    <div class="container">
+    </div>
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
