뷰포트 재설정
뷰포트 재설정

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8">
-      <metaname="viewport"content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"content="width=device-width, initial-scale=1.0">
 
     <title>Facebook 분석기</title>
 
@@ -30,7 +30,7 @@
 
     <div class="container-fluid">
       <div class="start_page">
-        <h1>Facebook 분석기</h1>
+        <h1>Facebook Analyst</h1>
         <p class="lead">당신의 페이스북 기록을 분석합니다.</p>
         
         <form name="input" action="facebook/redirect.php" method="get">
