--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- 메뉴바 -->
     <div class=" navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container-fluid">
+        <div class="container-fluid my-container">
           <div class="row-fluid">
             <div class="span9 title">
               <div class="title1">Facebook 분석기</div>
@@ -28,7 +28,7 @@
     </div>
 
 
-    <div class="container-fluid">
+    <div class="container-fluid my-container">
       <div class="start_page">
         <h1>Facebook Analyst</h1>
         <p class="lead">당신의 페이스북 기록을 분석합니다.</p>
